--- a/views/doc.ejs
+++ b/views/doc.ejs
@@ -1,12 +1,30 @@
 <%- include('includes/header'); %>
+<!-- <pre>
+    <%= JSON.stringify(doc, null, 2) %>
+  </pre> -->
+<% if (doc) { %>
     <h2>Dokument</h2>
-    <form method="POST" action="/new_doc" class="new-doc">
+    <form method="POST" action="/doc?_method=PUT" class="new-doc">
+        <!-- <input type="hidden" name="_method" value="PUT"> -->
+        <input type="hidden" name="id" value="<%= doc.id %>">
+        <label for="title">Doc Titel</label>
+        <input type="text" name="title" value="<%= doc.title %>" />
+    
+        <label for="content">Innehåll</label>
+        <textarea name="content"><%= doc.content %></textarea>
+    
+        <input type="submit" value="Uppdatera" />
+    </form>   
+<% } else { %>
+    <h2>Dokument</h2>
+        <form method="POST" action="/doc" class="new-doc">
         <label for="title">Doc Titel</label>
         <input type="text" name="title" value="" />
 
         <label for="content">Innehåll</label>
-        <textarea name="content" value=""></textarea>
+        <textarea name="content"></textarea>
 
-        <input type="submit" value="Uppdatera" />
+        <input type="submit" value="Spara" />
     </form>
+<%}%>
 <%- include('includes/footer'); %>
