--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <%- include('includes/header'); %>
-
-    <h2>Dokument</h2>
+<h2>Dokuments</h2>
+<article class="article"> 
     <% if (docs && docs.length > 0) { %>
         <% docs.forEach(function(doc) { %>
             <h3><a href="/doc/<%= doc.id %>"><%= doc.title %> ID: <%= doc.id %> </a></h3>
         <% }); %>
     <% } %>
     <h3><a href="/doc">Create a new dockument</a></h3>
-    
+</article>   
 <%- include('includes/footer'); %>
