--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="sv">
 <head>
+    <!-- Simple header, need some work in the future-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>SSR-Editor</title>
@@ -9,6 +10,7 @@
 </head>
 <body>
     <header>
+        <!-- Namechange?-->
         <h1>SSR Editor</h1>
     </header>
     <main class="main" id="main">
