--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,6 +1,7 @@
 </main>
 <footer>
-    <p class="copyright">&copy; Emil Folino</p>
+    <!--- Simple footer, may need some work in the future -->
+    <p class="copyright">&copy; Noah & Olga</p>
 </footer>
 </body>
 </html>
