--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <h2>Dokuments</h2>
 <div class="container"> 
     <div class="doc">
-        <h3><a href="/doc">New dockument</a></h3>
+        <h3><a href="/doc">Create new dockument</a></h3>
     </div>
     <% if (docs && docs.length > 0) { %>
         <% docs.forEach(function(doc) { %>
