--- a/views/doc.ejs
+++ b/views/doc.ejs
@@ -3,7 +3,7 @@
 <!-- If there is a document, show its title and make it a clickable link to the doc-->
 <% if (doc) { %>
     <h2>Document: <%= doc.title ? doc.title : 'No Title' %></h2>
-    <form method="POST" action="/doc?_method=PUT" class="new-doc">
+    <form method="POST" action="/sql/doc?_method=PUT" class="new-doc">
         <input type="hidden" name="id" value="<%= doc.id %>">
         <label for="title">Title</label>
         <input type="text" name="title" value="<%= doc.title %>" />
@@ -15,7 +15,7 @@
     </form>   
 <% } else { %>
     <h2>New Document</h2>
-    <form method="POST" action="/doc" class="new-doc">
+    <form method="POST" action="/sql/doc" class="new-doc">
         <label for="title">Title</label>
         <input type="text" name="title" value="" />
 
