--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,17 +1,16 @@
 <!doctype html>
 <html lang="sv">
 <head>
+    <!-- Simple header, need some work in the future-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>SSR-Editor</title>
+
     <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
     <header>
+        <!-- Namechange?-->
         <h1>SSR Editor</h1>
-        <nav>
-            <a href="/">All documents</a>
-            <a href="/doc">New document</a>
-        </nav>
     </header>
     <main class="main" id="main">
