--- a/views/doc.ejs
+++ b/views/doc.ejs
@@ -1,28 +1,29 @@
 <%- include('includes/header'); %>
-<!-- <pre>
-    <%= JSON.stringify(doc, null, 2) %>
-  </pre> -->
+
+<!-- If there is a document, show its title and make it a clickable link to the doc-->
 <% if (doc) { %>
-    <form method="POST" action="/doc?_method=PUT" class="document">
-        <!-- <input type="hidden" name="_method" value="PUT"> -->
+    <h2>Document: <%= doc.title ? doc.title : 'No Title' %></h2>
+    <form method="POST" action="/sql/doc?_method=PUT" class="new-doc">
         <input type="hidden" name="id" value="<%= doc.id %>">
-        <label for="title"></label>
-        <input class="title" type="text" name="title" value="<%= doc.title %>" />
+        <label for="title">Title</label>
+        <input type="text" name="title" value="<%= doc.title %>" />
     
-        <label for="content"></label>
-        <textarea class="doc-content" name="content"><%= doc.content %></textarea>
+        <label for="content">Content</label>
+        <textarea name="content"><%= doc.content %></textarea>
     
-        <input class="submit" type="submit" value="Update" />
+        <input type="submit" value="Uppdatera" />
     </form>   
 <% } else { %>
-        <form method="POST" action="/doc" class="document">
-        <label for="title"></label>
-        <input class="title" type="text" name="title" value="" placeholder="add name"/>
+    <h2>New Document</h2>
+    <form method="POST" action="/sql/doc" class="new-doc">
+        <label for="title">Title</label>
+        <input type="text" name="title" value="" />
 
-        <label for="content"></label>
-        <textarea class="doc-content" name="content" placeholder="add content"></textarea>
+        <label for="content">Content</label>
+        <textarea name="content"></textarea>
 
-        <input class="submit" type="submit" value="Save" />
+        <input type="submit" value="Spara" />
     </form>
 <%}%>
+
 <%- include('includes/footer'); %>
