--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,24 @@
 <%- include('includes/header'); %>
-<h2>Dokuments</h2>
-<div class="container"> 
-    <div class="doc">
-        <h3><a href="/doc">Create new dockument</a></h3>
-    </div>
+<!-- If there is a document, show its title and make it a clickable link to the doc-->
+
+ <!-- move elemtn creating a new dokument in the top of the page-->
+ <div class="headers">
+    <h2>Documents</h2>
+    <h3 class="create-new-doc">
+        <a href="/sql/doc" class="button">Create a new document</a>
+    </h3>
+</div> 
+<article class="article">
     <% if (docs && docs.length > 0) { %>
         <% docs.forEach(function(doc) { %>
-            <div class="doc">
-                <h3><a href="/doc/<%= doc.id %>"><%= doc.title %></a></h3>
-            </div>
+            <h3>
+                <a href="/sql/doc/<%= doc.id %>">
+                    Document: <%= doc.title ? doc.title : 'No Title' %>
+                </a>
+            </h3>
         <% }); %>
-    <% } %>
-</div>   
+    <% } %>      
+    <pre id="json-container"></pre>
+    <script src="app.js"></script>
+</article>   
 <%- include('includes/footer'); %>
