fetching CI-kedja with working tests from remote

--- a/frontend/src/styles/article.css
+++ b/frontend/src/styles/article.css
@@ -1,5 +1,6 @@
 .article ul.list-group {
     /*ändrar fält med dokument*/
+    list-style-type: none;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     gap: 20px;
